@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2306] fixed links for graphs in screens (Aly)
  - [ZBX-633] removed linkage of OpenIPMI library to Agents in "configure" script (Sasha) 
  - [ZBX-633] more debug information in checks_ipmi.c module (Sasha) 
  - [ZBX-2362] fixed processing of logrt[] checks under Windows (Sasha)
